projects align fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -109,12 +109,17 @@ h3 {
   margin: 0 auto;
 }
 .content .work-head {
-  font-size: 40px;
+  font-size: 30px;
+  text-align: center;
 }
 
 .project-description {
   padding: 60px;
 }
+.project-photo {
+  max-width: 80%;
+}
+
 .logo {
   max-height: 50px;
   border-radius: 20px;
@@ -155,7 +160,7 @@ nav a {
 }
 footer .contact-box {
   background: var(--secondary-color);
-  padding: 30px 120px;
+  padding: 30px 50px;
   border-radius: 20px;
   margin: 0 auto;
   text-align: center;
@@ -254,14 +259,6 @@ footer .social-links a:hover {
     font-size: 5px;
     line-height: 5px;
   }
-  .project-description {
-    padding: 0;
-    text-align: center;
-  }
-  .content {
-    text-align: center;
-    padding: 0;
-  }
   .name {
     display: none;
   }
@@ -282,6 +279,14 @@ footer .social-links a:hover {
   }
 }
 @media (max-width: 740px) {
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
+  .content {
+    text-align: center;
+    padding: 0;
+  }
   .carousel {
     height: 475px;
   }
@@ -291,6 +296,9 @@ footer .social-links a:hover {
   .skill-icon,
   .host {
     display: block;
+  }
+  .project-box {
+    margin-top: 100px;
   }
 }
 @media (max-width: 430px) {
